--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p>This is freedomkite, a tool to dynamically serve subdomains and PageKite frontends for FreedomBoxes (and potentially other devices.</p>
+<p>This is freedomkite, a tool to dynamically serve subdomains and PageKite frontends for FreedomBoxes (and potentially other devices).</p>
 <p>To get started, you need a freedomkite voucher code:</p>
 <form action="/cgi-bin/generate.pl" method="post">
 <input type="submit" value="Generate">
