link to github repo

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <p>This is freedomkite, a tool to dynamically serve subdomains and PageKite frontends for FreedomBoxes (and potentially other devices).</p>
+<p>For the code and documentation, see: <a href="https://github.com/peacekeeper/freedomkite">https://github.com/peacekeeper/freedomkite</a></p>
 <p>To get started, you need a freedomkite voucher code:</p>
 <form action="/cgi-bin/generate.pl" method="post">
 <input type="submit" value="Generate">
